etherpad.yml
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: etherpad
spec:
  replicas: 1
  selector:
    matchLabels:
      app: etherpad
  template:
    metadata:
      labels:
        app: etherpad
    spec:
      containers:
      - name: etherpad
        image: etherpad/etherpad:2.0
        ports:
        - containerPort: 9001
        volumeMounts:
        - name: etherpad-var
          mountPath: /opt/etherpad-lite/var
      volumes:
      - name: etherpad-var
        persistentVolumeClaim:
          claimName: etherpad-var
