etherpad-ingress.yml
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: etherpad-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: etherpad.mondomaine.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: etherpad
            port:
              number: 9001
